(in school) fix non-invisible background glitch

--- a/code.css
+++ b/code.css
@@ -45,6 +45,7 @@
     margin: auto;
     height: 86%;
     padding: 0!important;  
+    background:transparent;
 }
 .layer+.layer .ui-standard-sidebar-view .sidebar-region {
     border-radius: 20px 0px 0px 20px;
